src/objects/OpportunityProductSchedule__c.object
<CustomObject>
    <description>Opportunity Product Schedule</description>
    <fields>
        <fullName>Forecast_Value_USD__c</fullName>
        <formula>IF (Opportunity__r.Currency__r.Exchange_Rate__c &lt;&gt; 0, Forecast_Value__c / ROUND(Opportunity__r.Currency__r.Exchange_Rate__c, 6), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Prod Value (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecast_Value__c</fullName>
        <formula>Oppty_Sched_Qty__c  *  Qty_Per_Sys__c  *  Share__c  *  Prod_Sched_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Prod Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Frozen_Oppty_Sched_Qty__c</fullName>
        <label>Frozen Oppty Sched Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Frozen_Prod_Qty__c</fullName>
        <formula>Frozen_Oppty_Sched_Qty__c  *  Qty_Per_Sys__c  *   Frozen_Share__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Frozen Prod Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Frozen_Prod_Sched_Price__c</fullName>
        <label>Frozen Prod Sched Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Frozen_Prod_Value__c</fullName>
        <formula>Frozen_Oppty_Sched_Qty__c  *  Qty_Per_Sys__c  *  Frozen_Share__c  *  Frozen_Prod_Sched_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Frozen Prod Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Frozen_Share__c</fullName>
        <label>Frozen Share (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Product Schedules</relationshipLabel>
        <relationshipName>Opportunity_Product_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Oppty_Prod_ID_Full__c</fullName>
        <label>Oppty Prod ID Full</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Sched_Qty__c</fullName>
        <label>Oppty Sched Qty</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prod_Qty__c</fullName>
        <formula>Oppty_Sched_Qty__c *  Qty_Per_Sys__c  *  Share__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prod Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prod_Sched_Price__c</fullName>
        <label>Prod Sched Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunity Product Schedules</relationshipLabel>
        <relationshipName>Opportunity_Product_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qty_Per_Sys__c</fullName>
        <label>Qty per Sys</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sched_Date__c</fullName>
        <label>Sched Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sched_Qtr__c</fullName>
        <description>Quarter of the sched date</description>
        <formula>TEXT(CEILING(MONTH(Sched_Date__c) / 3))</formula>
        <label>Sched Qtr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sched_Year_Qtr__c</fullName>
        <description>Year quarter of the sched date</description>
        <formula>Sched_Year__c &amp; &quot;Q&quot; &amp; Sched_Qtr__c</formula>
        <label>Sched Year Qtr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sched_Year__c</fullName>
        <description>Year of the sched date</description>
        <formula>TEXT(YEAR(Sched_Date__c))</formula>
        <label>Sched Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Share__c</fullName>
        <label>Share (%)</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Opportunity Product Schedule</label>
    <nameField>
        <displayFormat>OPS-{0000}</displayFormat>
        <label>Opportunity Product Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Product Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>